<resources>
    <string name="added_to_favorite"> Added to Favorite</string>
    <string name="added_to_watchlist"> Added to Watchlist</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="app_name">Cinelog</string>
    <string name="rating">Rating</string>
    <string name="Of_10">10</string>
    <string name="slash">/</string>
    <string name="sample_title">Aquaman</string>
    <string name="sample_description">A musician helps a young singer find fame as age and alcoholism send his own career into a downward spiral.</string>
    <string name="sample_year">2018</string>
    <string name="sample_genre">Action, Adventure, Fantasy</string>
    <string name="sample_playtime">2h 23min</string>
    <string name="favorit_button">Favorite</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="favorite">Favorite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stars">Stars</string>
    <string name="creator">Creator</string>
    <string name="language">Language</string>
    <string-array name="data_title">
    <item>A Star Is Born</item>
    <item>Aquaman</item>
    <item>Avengers : Invinity War</item>
    <item>Bumblebee</item>
    <item>Once Upon a Deadpool</item>
    <item>How to Train Your Dragon : The Hidden World</item>
    <item>Marry Poppins Returns</item>
    <item>Robin Hood</item>
    <item>Spider-man : Into the Spider-Verse</item>
    <item>Venom</item>

    </string-array>
    <string-array name="data_video_link">
        <item>nSbzyEJ8X9E</item>
        <item>00QMS3Ldb20</item>
        <item>6ZfuNTqbHE8</item>
        <item>lcwmDAYt22k</item>
        <item>PCf03KXyzIg</item>
        <item>naW9U8MiUY0</item>
        <item>-3jsfXDZLIY</item>
        <item>zwPn9ZnbCo0</item>
        <item>tg52up16eq0</item>
        <item>xLCn88bfW1o</item>
    </string-array>
    <string-array name="data_video">
        <item>d1EnW4kn1kg</item>
        <item>1JLUn2DFW4w</item>
        <item>zDBUooZQzgA</item>
        <item>_38JDGnr0vA</item>
        <item>s9APLXM9Ei8</item>
        <item>nKGehVxS50A</item>
        <item>rlR4PJn8b8I</item>
        <item>78ngg0SRlEI</item>
        <item>tiVNk6_0GdY</item>
        <item>c8aFcHFu8QM</item>
    </string-array>
    <string-array name="year">
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2019)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
    </string-array>
    <string-array name="data_description">
        <item>A musician helps a young singer find fame as age and alcoholism send his own career into a downward spiral.</item>
        <item>Arthur Curry, the human-born heir to the underwater kingdom of Atlantis, goes on a quest to prevent a war between the worlds of ocean and land.</item>
        <item>The Avengers and their allies must be willing to sacrifice all in an attempt to defeat the powerful Thanos before his blitz of devastation and ruin puts an end to the universe.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small California beach town. On the cusp of turning 18 and trying to find her place in the world, Charlie Watson discovers Bumblebee, battle-scarred and broken.</item>
        <item>Foul-mouthed mutant mercenary Wade Wilson (AKA. Deadpool), brings together a team of fellow mutant rogues to protect a young boy with supernatural abilities from the brutal, time-traveling cyborg, Cable.</item>
        <item>When Hiccup discovers Toothless isn\'t the only Night Fury, he must seek "The Hidden World", a secret Dragon Utopia before a hired tyrant named Grimmel finds it first.</item>
        <item>Decades after her original visit, the magical nanny returns to help the Banks siblings and Michael\'s children through a difficult time in their lives.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Teen Miles Morales becomes Spider-Man of his reality, crossing his path with five counterparts from other dimensions to stop a threat for all realities.</item>
        <item>A failed reporter is bonded to an alien entity, one of many symbiotes who have invaded Earth. But the being takes a liking to Earth and decides to protect it.</item>

    </string-array>
    <string-array name="data_director">
        <item>Bradley Cooper</item>
        <item>James Wan</item>
        <item>Anthony Ruso, Joe Ruso</item>
        <item>Travis Knight</item>
        <item>David Leitch</item>
        <item>Dean DeBlois</item>
        <item>Rob Marshall</item>
        <item>Otto Bathurst</item>
        <item>Bob Persichetti, Peter Ramsey </item>
        <item>Ruben Fleischer</item>
    </string-array>
    <string-array name="data_writer">
        <item>Eric Roth</item>
        <item>David Leslie Johnson-McGoldrick, Will Beall</item>
        <item>Christopher Markus, Stephen McFeely</item>
        <item>Christina Hodson</item>
        <item>Rhett Reese, Paul Wernick</item>
        <item>Dean DeBlois, Cressida Cowell </item>
        <item>P.L. Travers </item>
        <item>Ben Chandler, David James Kelly</item>
        <item>Phil Lord, Rodney Rothman</item>
        <item>Jeff Pinkner, Scott Rosenberg</item>
    </string-array>
    <string-array name="data_genre">
        <item>Drama, Music, Romance</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Action, Adventure, Sci-Fi</item>
        <item>Action, Adventure, Sci-Fi</item>
        <item>Action, Adventure, Comedy</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Animation, Action, Adventure</item>
        <item>Comedy, Family, Thriller</item>
        <item>Animation, Action, Adventure </item>
        <item>Action, Sci-fi, Thriller</item>
    </string-array>
    <string-array name="data_playtime">
        <item>2h 16min</item>
        <item>2h 13min</item>
        <item>2h 29min</item>
        <item>1h 54min</item>
        <item>1h 59min</item>
        <item>1h 44min</item>
        <item>2h 10min</item>
        <item>1h 56min</item>
        <item>1h 57min</item>
        <item>1h 52min</item>
    </string-array>
    <string-array name="data_photo">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_venom</item>
    </string-array>
    <string-array name="data_rating">
        <item>7.7</item>
        <item>7.0</item>
        <item>8.5</item>
        <item>6.8</item>
        <item>7.7</item>
        <item>7.5</item>
        <item>6.8</item>
        <item>5.3</item>
        <item>8.4</item>
        <item>6.7</item>
    </string-array>
    <string-array name="data_title_tv">
        <item>Avatar: The Last Airbender </item>
        <item>Breaking Bad</item>
        <item>Band of Brothers</item>
        <item>Blue Planet II </item>
        <item>Chernobyl </item>
        <item>Death Note: Desu nôto</item>
        <item>Game of Thrones </item>
        <item>One Punch Man: Wanpanman </item>
        <item>Planet Earth</item>
        <item>Planet Earth II </item>
    </string-array>
    <string-array name="year_tv">
        <item>(2005&#8211;2008)</item>
        <item>(2008&#8211;2013)</item>
        <item>(2001)</item>
        <item>(2017&#8211;2018)</item>
        <item>(2019)</item>
        <item>(2011&#8211;2019)</item>
        <item>(2006&#8211;2007)</item>
        <item>(2015)</item>
        <item>(2006)</item>
        <item>(2016)</item>
    </string-array>
    <string-array name="data_description_tv">
        <item>In a war-torn world of elemental magic, a young boy reawakens to undertake a dangerous mystic quest to fulfill his destiny as the Avatar, and bring peace to the world.</item>
        <item>A high school chemistry teacher diagnosed with inoperable lung cancer turns to manufacturing and selling methamphetamine in order to secure his family\'s future.</item>
        <item>The story of Easy Company of the U.S. Army 101st Airborne Division, and their mission in World War II Europe, from Operation Overlord, through V&#8211;J Day.</item>
        <item>Attenborough returns to the world\'s oceans in this sequel to the acclaimed documentary filming rare and unusual creatures of the deep, as well as documenting the problems our oceans face.</item>
        <item>In April 1986, an explosion at the Chernobyl nuclear power plant in the Union of Soviet Socialist Republics becomes one of the world\'s worst man&#8211;made catastrophes.</item>
        <item>Nine noble families fight for control over the mythical lands of Westeros, while an ancient enemy returns after being dormant for thousands of years.</item>
        <item>An intelligent high school student goes on a secret crusade to eliminate criminals from the world after discovering a notebook capable of killing anyone whose name is written into it.</item>
        <item>The story of Saitama, a hero that does it just for fun &amp; can defeat his enemies with a single punch.</item>
        <item>Emmy Award&#8211;winning, 11 episodes, five years in the making, the most expensive nature documentary series ever commissioned by the BBC, and the first to be filmed in high definition.</item>
        <item>David Attenborough returns in this breathtaking documentary showcasing life on Planet Earth.</item>

    </string-array>
    <string-array name="data_photo_tv">
        <item>@drawable/tv_avatar</item>
        <item>@drawable/tv_bb</item>
        <item>@drawable/tv_bob</item>
        <item>@drawable/tv_bp2</item>
        <item>@drawable/tv_chernobyl</item>
        <item>@drawable/tv_deathn</item>
        <item>@drawable/tv_got</item>
        <item>@drawable/tv_opm</item>
        <item>@drawable/tv_planet_earth_1</item>
        <item>@drawable/tv_planer_earth</item>
    </string-array>
    <string-array name="data_stars">
        <item>Dee Bradley Baker, Zach Tyler, Jack De Sena</item>
        <item>Bryan Cranston, Aaron Paul, Anna Gunn</item>
        <item>Scott Grimes, Damian Lewis, Ron Livingston</item>
        <item>David Attenborough, Peter Drost, Roger Munns </item>
        <item>Jessie Buckley, Jared Harris, Stellan Skarsgård </item>
        <item>Mamoru Miyano, Brad Swaile, Vincent Tong</item>
        <item>Emilia Clarke, Peter Dinklage, Kit Harington</item>
        <item>Makoto Furukawa, Kaito Ishikawa, Hiromichi Tezuka</item>
        <item>David Attenborough, Sigourney Weaver, Huw Cordey</item>
        <item>David Attenborough</item>

    </string-array>
    <string-array name="data_creator">
        <item>Michael Dante DiMartino, Bryan Konietzko</item>
        <item>Vince Gilligan</item>
        <item>-</item>
        <item>-</item>
        <item>Craig Mazin</item>
        <item>-</item>
        <item>David Benioff, D.B. Weiss</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
    </string-array>
    <string-array name="data_genre_tv">
        <item>Animation, Action, Adventure</item>
        <item>Action, Drama, History</item>
        <item>Documentary</item>
        <item>Crime, Drama, Thriller</item>
        <item>Drama, History, Thriller </item>
        <item>Action, Adventure, Drama </item>
        <item>Animation, Crime, Drama</item>
        <item>Animation, Action, Adventure </item>
        <item>Documentary</item>
        <item>Documentary</item>
    </string-array>
</resources>