<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailMovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgVideo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/v_aquaman" />
        <androidx.cardview.widget.CardView
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <ImageView
                    android:id="@+id/imgPoster"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:src="@drawable/poster_aquaman" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_toEndOf="@id/imgPoster"
                    android:layout_marginLeft="20dp">
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_title"
                        android:textColor="@android:color/black"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3">
                        <TextView
                            android:id="@+id/year"
                            android:textSize="10sp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_year"
                            />
                        <TextView
                            android:id="@+id/tv_genre"
                            android:textSize="10sp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_genre"
                            />

                        <TextView
                            android:id="@+id/tv_playtime"
                            android:textSize="10sp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_playtime"
                            />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_description"
                        android:textSize="15sp"
                        android:textColor="@android:color/black"/>

                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <RelativeLayout
                            android:layout_weight="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:id="@+id/star"
                                android:textColor="@color/grayLight"
                                android:layout_marginRight="5dp"
                                android:layout_centerVertical="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_star_black_24dp"/>

                            <TextView
                                android:textStyle="bold"
                                android:layout_toRightOf="@id/rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/slash"
                                android:text="@string/slash"
                                android:textColor="@color/grayLight"
                                android:textSize="16sp"
                                android:layout_marginTop="5dp"
                                android:padding="1dp"/>

                            <TextView
                                android:layout_toRightOf="@id/star"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/rating"
                                android:text="@string/rating"
                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:layout_marginTop="5dp"
                                android:padding="1dp"/>

                            <TextView
                                android:layout_toRightOf="@id/slash"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Of_10"
                                android:textColor="@color/grayLight"
                                android:textSize="10sp"
                                android:layout_marginTop="5dp"
                                android:padding="1dp"/>
                        </RelativeLayout>


                        <Button
                            android:clickable="false"
                            android:focusable="false"
                            android:textStyle="bold"
                            android:background="@color/yellow"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:text="@string/favorit_button"
                            android:textSize="10sp"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:id="@+id/btn_favorite"/>

                        <Button
                            android:focusable="false"
                            android:clickable="false"
                            android:id="@+id/btn_WatchList"
                            android:layout_marginStart="3dp"
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical"
                            android:paddingTop="5dp"
                            android:paddingLeft="3dp"
                            android:drawableTop="@drawable/ic_playlist_add_black_24dp"
                            android:background="@color/yellow"
                            android:layout_width="40dp"
                            android:layout_height="30dp"
                            style="@style/Widget.AppCompat.Button.Colored"/>

                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="16dp">
                    <TextView

                        android:layout_marginRight="16dp"
                        android:text="@string/director"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_director"
                        android:text=" director "
                        android:textColor="@android:color/black"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="16dp">
                    <TextView
                        android:layout_marginRight="16dp"
                        android:text="@string/writer"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_writer"
                        android:text="@string/director"
                        android:textColor="@android:color/black"/>
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>


</ScrollView>